--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>User Dashboard</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?v={{ css_version }}">
+  <link rel="stylesheet" href="C:\Users\sihmars\OneDrive\Desktop\expense analyzer\static\styles.css">
   <link rel="icon" href="{{ url_for('static', filename='logo.png') }}" type="image/png">
 </head>
 <body class="dashboard-page page-bg">
